@@ -60,7 +60,7 @@ apply plugin: 'license-report'
 
 def INDEXER_XMS = "$System.env.INDEXER_XMS"
 def INDEXER_XMX = "$System.env.INDEXER_XMX"
-def INDEXER_ARGS = "$System.env.CONDUCTOR_ARGS"
+def INDEXER_ARGS = "$System.env.INDEXER_ARGS"
 def PARALLEL = "$System.env.PARALLELISM"
 def GC = "$System.env.GC"
 
@@ -105,7 +105,7 @@ println "Enabled profiles: " + Arrays.toString(run.args)
 checkstyle {
   toolVersion = "${checkstyle_version}"
   showViolations = false
-    config project.resources.text.fromUri('https://raw.githubusercontent.com/openlattice/openlattice/develop/gradles/checkstyle.xml')
+    config project.resources.text.fromUri(rootProject.file('gradles/checkstyle.xml').toURI())
 }
 tasks.withType(Checkstyle) {
     reports {
@@ -156,12 +156,11 @@ dependencies {
     testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
     testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
-    compile "org.ow2.asm:asm:${asm_version}"
+    implementation "org.ow2.asm:asm:${asm_version}"
 
-    compile "com.openlattice:conductor-client:${conductor_client_version}"
-    compile "com.openlattice:scrunchie:${scrunchie_version}"
-    compile "com.openlattice:courier:${courier_version}"
-    compile "com.openlattice:rhizome:${rhizome_version}"
+    implementation "com.openlattice:conductor-client:${conductor_client_version}"
+    implementation "com.openlattice:courier:${courier_version}"
+    implementation "com.openlattice:rhizome:${rhizome_version}"
 
     if( project.hasProperty('developmentMode') && project.developmentMode ) {
         testImplementation(project(path: ":rhizome-client", configuration: "tests"))
@@ -174,7 +173,7 @@ dependencies {
      */
     testImplementation "junit:junit:${junit_version}"
     testImplementation "org.mockito:mockito-all:${mockito_version}"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 eclipse {
@@ -189,12 +188,7 @@ eclipse.classpath.plusConfigurations += [configurations.provided]
 
 tasks.withType(JavaCompile) {
     options.compilerArgs+= [ "--add-modules", "java.se",
-                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
-                             "--add-opens","java.base/java.lang=ALL-UNNAMED",
-                             "--add-opens","java.base/java.nio=ALL-UNNAMED",
-                             "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
-                             "--add-opens","java.management/sun.management=ALL-UNNAMED",
-                             "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED"]
 }
 
 tasks.withType(Test) {
@@ -218,7 +212,7 @@ jar {
     doFirst {
         manifest {
             attributes (
-                    "Class-Path": configurations.runtime.files.collect { it.getName() }.join(" "),
+                    "Class-Path": configurations.runtimeClasspath.files.collect { it.getName() }.join(" "),
                     "Main-Class": mainClassName
             )
         }
